# serializer version: 1
# name: test_documents_with_errors[bad-status-code]
  '''
  Generating /test-documents-with-errors
  
  Warning(s) encountered while generating. Client was generated, but some pieces may be missing
  WARNING parsing GET / within default.
  
  Invalid response status code pattern: abcdef, response will be omitted from generated client
  
  
  If you believe this was a mistake or this tool is missing a feature you need, please open an issue at https://github.com/openapi-generators/openapi-python-client/issues/new/choose
  
  '''
# ---
# name: test_documents_with_errors[circular-body-ref]
  '''
  Generating /test-documents-with-errors
  
  Warning(s) encountered while generating. Client was generated, but some pieces may be missing
  WARNING parsing POST / within default. Endpoint will not be generated.
  
  Circular $ref in request body
  
  
  If you believe this was a mistake or this tool is missing a feature you need, please open an issue at https://github.com/openapi-generators/openapi-python-client/issues/new/choose
  
  '''
# ---
# name: test_documents_with_errors[invalid-uuid-defaults]
  '''
  Generating /test-documents-with-errors
  
  Warning(s) encountered while generating. Client was generated, but some pieces may be missing
  WARNING parsing PUT / within default. Endpoint will not be generated.
  
  cannot parse parameter of endpoint put: Invalid UUID value: 3
  
  
  WARNING parsing POST / within default. Endpoint will not be generated.
  
  cannot parse parameter of endpoint post: Invalid UUID value: notauuid
  
  
  If you believe this was a mistake or this tool is missing a feature you need, please open an issue at https://github.com/openapi-generators/openapi-python-client/issues/new/choose
  
  '''
# ---
# name: test_documents_with_errors[missing-body-ref]
  '''
  Generating /test-documents-with-errors
  
  Warning(s) encountered while generating. Client was generated, but some pieces may be missing
  WARNING parsing POST / within default. Endpoint will not be generated.
  
  Could not resolve $ref #/components/requestBodies/body in request body
  
  
  If you believe this was a mistake or this tool is missing a feature you need, please open an issue at https://github.com/openapi-generators/openapi-python-client/issues/new/choose
  
  '''
# ---
# name: test_documents_with_errors[optional-path-param]
  '''
  Generating /test-documents-with-errors
  
  Warning(s) encountered while generating. Client was generated, but some pieces may be missing
  WARNING parsing GET /{optional} within default. Endpoint will not be generated.
  
  Path parameter must be required
  
  {
    "name": "optional",
    "in": "path",
    "schema": {
      "type": "string"
    }
  }
  
  If you believe this was a mistake or this tool is missing a feature you need, please open an issue at https://github.com/openapi-generators/openapi-python-client/issues/new/choose
  
  '''
# ---
